[gd_scene load_steps=4 format=3 uid="uid://fn2t487lkgsb"]

[ext_resource type="Script" uid="uid://s846xi1rfd48" path="res://scenes/world_select/world_select.gd" id="1_ciowd"]
[ext_resource type="PackedScene" uid="uid://pix7e5pdtxks" path="res://scenes/world_select/world_icon.tscn" id="2_s21dh"]
[ext_resource type="PackedScene" uid="uid://bdeofiunpy8cy" path="res://scenes/world_select/player_icon.tscn" id="3_cyeoe"]

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 320.0
script = ExtResource("1_ciowd")

[node name="worldIcon" parent="." instance=ExtResource("2_s21dh")]
offset_left = 46.0
offset_top = 220.0
offset_right = 110.0
offset_bottom = 284.0

[node name="worldIcon2" parent="." instance=ExtResource("2_s21dh")]
offset_left = 161.0
offset_top = 136.0
offset_right = 225.0
offset_bottom = 200.0
world_index = 2

[node name="worldIcon3" parent="." instance=ExtResource("2_s21dh")]
offset_left = 266.0
offset_top = 224.0
offset_right = 330.0
offset_bottom = 288.0
world_index = 3

[node name="worldIcon4" parent="." instance=ExtResource("2_s21dh")]
offset_left = 386.0
offset_top = 141.0
offset_right = 450.0
offset_bottom = 205.0
world_index = 4

[node name="worldIcon5" parent="." instance=ExtResource("2_s21dh")]
offset_left = 499.0
offset_top = 213.0
offset_right = 563.0
offset_bottom = 277.0
world_index = 5

[node name="PlayerIcon" parent="." instance=ExtResource("3_cyeoe")]
layout_mode = 0
pivot_offset = Vector2(10, 32)
